k8s/products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: products
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - port: 80
      targetPort: 8080
