k8s/products/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: products
spec:
  rules:
    - http:
        paths:
          - path: /products/search
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 80
